--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,8 @@
-
+version: 2 # use version 2.0 of CircleCI
+jobs: # a basic unit of work in a run
+  build: # runs not using `Workflows` must have a `build` job as entry point
+    macos:  # indicate that we are using the macOS executor
+      xcode: "10.0.0" # indicate our selected version of Xcode
+  steps:
+        - checkout # check out the code in the project directory
+        - run: echo "hello world" # run the `echo` command
